@@ -5,6 +5,8 @@ Distributed under the GPL v3 or later
 <unreleased>
 
 - The wget backend is compatible with wget2
+- Replace initial ~ and ~user with user's home directory in --destdir and other
+  path arguments
 
 Version 20250126
 
